--- a/tp 10-09.ipynb
+++ b/tp 10-09.ipynb
@@ -963,7 +963,7 @@
     "    return map_cp\n",
     "\n",
     "\n",
-    "map_cp(75001)\n",
+    "#pour lancer la fonction et créer une map : map_all() | map_type(type recherché) | map_cp(code postal)\n",
     "\n"
    ]
   },
